--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,10 +99,12 @@
 
 body {
   background-color: #f7f7fa;
+  padding-bottom: 500px;
 }
 
 a {
   text-decoration: none;
+  display: inline-block;
 }
 
 .flex {
@@ -123,7 +125,7 @@ a {
 }
 
 .main-container {
-  max-width: 1000px;
+  max-width: 1100px;
   width: 100%;
   margin: auto;
 }
@@ -148,7 +150,7 @@ header .lang-switcher {
 }
 
 .hero {
-  padding-top: 130px;
+  padding: 130px 30px 30px;
   height: 1000px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -165,10 +167,47 @@ header .lang-switcher {
 .hero .content p {
   font-size: 18px;
   margin-bottom: 40px;
+  max-width: 70%;
 }
 .hero .phone-img {
   filter: drop-shadow(17px 15px 11px rgba(0, 0, 0, 0.18));
   height: 100%;
+}
+
+.what-is-maraphone {
+  padding: 60px;
+  background-color: #ffffff;
+  box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
+  margin-top: -110px;
+  border-radius: 20px;
+}
+.what-is-maraphone h5 {
+  font-size: 19px;
+  font-weight: normal;
+  color: #8e9aa0;
+  margin-bottom: 8px;
+}
+.what-is-maraphone h2 {
+  font-size: 36px;
+  margin-bottom: 30px;
+  font-weight: 500;
+}
+.what-is-maraphone .features .card {
+  padding: 20px;
+  color: #1d252d;
+  flex: 1;
+}
+.what-is-maraphone .features .card img {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+.what-is-maraphone .features .card .title {
+  font-size: 21px;
+  font-weight: bold;
+  margin-bottom: 12px;
+}
+.what-is-maraphone .features .card p {
+  line-height: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
