--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,10 +12,12 @@
 
 body {
   background-color: #f7f7fa;
+  padding-bottom: 500px;
 }
 
 a {
   text-decoration: none;
+  display: inline-block;
 }
 
 .flex {
@@ -37,7 +39,7 @@ a {
 
 // main-container
 .main-container {
-  max-width: 1000px;
+  max-width: 1100px;
   width: 100%;
   margin: auto;
 }
@@ -64,7 +66,7 @@ header {
 
 // Hero section
 .hero {
-  padding-top: 130px;
+  padding: 130px 30px 30px;
   height: 1000px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -79,10 +81,50 @@ header {
     p {
       font-size: 18px;
       margin-bottom: 40px;
+      max-width: 70%;
     }
   }
   .phone-img {
     filter: drop-shadow(17px 15px 11px rgba(0, 0, 0, 0.18));
     height: 100%;
+  }
+}
+
+// What is Maraphone?
+.what-is-maraphone {
+  padding: 60px;
+  background-color: #ffffff;
+  box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
+  margin-top: -110px;
+  border-radius: 20px;
+  h5 {
+    font-size: 19px;
+    font-weight: normal;
+    color: #8e9aa0;
+    margin-bottom: 8px;
+  }
+  h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+    font-weight: 500;
+  }
+  .features {
+    .card {
+      padding: 20px;
+      color: #1d252d;
+      flex: 1;
+      img {
+        margin-left: 20px;
+        margin-bottom: 20px;
+      }
+      .title {
+        font-size: 21px;
+        font-weight: bold;
+        margin-bottom: 12px;
+      }
+      p {
+        line-height: 30px;
+      }
+    }
   }
 }
