--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,11 +13,23 @@
 body {
   background-color: #f7f7fa;
   padding-bottom: 500px;
+  color: #1d252d;
+}
+
+p {
+  line-height: 30px;
 }
 
 a {
   text-decoration: none;
   display: inline-block;
+}
+
+h5 {
+  font-size: 19px;
+  font-weight: normal;
+  color: #8e9aa0;
+  margin-bottom: 8px;
 }
 
 .flex {
@@ -97,34 +109,51 @@ header {
   box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
   margin-top: -110px;
   border-radius: 20px;
-  h5 {
-    font-size: 19px;
-    font-weight: normal;
-    color: #8e9aa0;
-    margin-bottom: 8px;
-  }
   h2 {
     font-size: 36px;
     margin-bottom: 30px;
     font-weight: 500;
   }
-  .features {
-    .card {
-      padding: 20px;
-      color: #1d252d;
+  .card {
+    padding: 20px;
+    color: #1d252d;
+    flex: 1;
+    img {
+      margin-left: 20px;
+      margin-bottom: 20px;
+    }
+    .title {
+      font-size: 21px;
+      font-weight: bold;
+      margin-bottom: 12px;
+    }
+    p {
+      line-height: 30px;
+    }
+  }
+}
+
+// Features
+.features {
+  padding: 80px 40px 40px;
+  .feature {
+    display: flex;
+    padding: 80px 0;
+    &.reverse {
+      flex-direction: row-reverse;
+    }
+    .content {
       flex: 1;
-      img {
-        margin-left: 20px;
-        margin-bottom: 20px;
-      }
+      padding: 24px 30px 0;
       .title {
-        font-size: 21px;
+        font-size: 40px;
         font-weight: bold;
-        margin-bottom: 12px;
+        line-height: 50px;
+        margin-bottom: 24px;
       }
-      p {
-        line-height: 30px;
-      }
+    }
+    img {
+      flex: 1;
     }
   }
 }
