--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,4 +240,86 @@ header .lang-switcher {
   flex: 1;
 }
 
+.FAQs {
+  text-align: center;
+}
+.FAQs h2 {
+  font-size: 60px;
+  margin-bottom: 60px;
+}
+.FAQs ul {
+  list-style-type: none;
+  width: 100%;
+  max-width: 700px;
+  margin: auto;
+}
+.FAQs ul li {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
+  margin-bottom: 22px;
+  text-align: start;
+  position: relative;
+  transition: all 0.2s ease-out;
+}
+.FAQs ul li.expand .question::after {
+  transform: scaleX(1);
+  background-color: #f3efef;
+}
+.FAQs ul li.expand .answer {
+  animation: expanding 1s ease forwards 0ms;
+}
+.FAQs ul li.expand .arrow-icon {
+  transform: rotate(0);
+}
+.FAQs ul li .question {
+  font-weight: 500;
+  font-size: 18px;
+  position: relative;
+  cursor: pointer;
+  padding: 24px 30px;
+}
+.FAQs ul li .question::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 30px;
+  width: calc(100% - 60px);
+  height: 2px;
+  background-color: #ff375e;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: all 0.2s ease-out;
+}
+.FAQs ul li .answer {
+  color: #8e9aa0;
+  line-height: 28px;
+  height: auto;
+  opacity: 0;
+  padding: 0 30px;
+  transform: translateY(5px);
+  max-height: 0;
+  transition: max-height 1s ease 0ms;
+}
+.FAQs ul li .arrow-icon {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  transform: rotate(90deg);
+  transition: all 0.2s ease-out;
+}
+
+@keyframes expanding {
+  30% {
+    max-height: 500px;
+    padding-bottom: 20px;
+  }
+  100% {
+    max-height: 500px;
+    padding-bottom: 20px;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
