Add stc footer component

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,6 @@
 
 body {
   background-color: #f7f7fa;
-  padding-bottom: 500px;
   color: #1d252d;
 }
 
@@ -137,7 +136,7 @@ h5 {
 }
 
 .main-container {
-  max-width: 1100px;
+  max-width: 1200px;
   width: 100%;
   margin: auto;
 }
@@ -184,6 +183,18 @@ header .lang-switcher {
 .hero .phone-img {
   filter: drop-shadow(17px 15px 11px rgba(0, 0, 0, 0.18));
   height: 100%;
+  animation: movePhoneImg 3.6s ease-out infinite;
+}
+@keyframes movePhoneImg {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .what-is-maraphone {
@@ -242,6 +253,7 @@ header .lang-switcher {
 
 .FAQs {
   text-align: center;
+  padding-bottom: 60px;
 }
 .FAQs h2 {
   font-size: 60px;
@@ -263,6 +275,7 @@ header .lang-switcher {
   transition: all 0.2s ease-out;
 }
 .FAQs ul li.expand .question::after {
+  transition: all 0.4s ease-out;
   transform: scaleX(1);
   background-color: #f3efef;
 }
@@ -270,14 +283,14 @@ header .lang-switcher {
   animation: expanding 1s ease forwards 0ms;
 }
 .FAQs ul li.expand .arrow-icon {
-  transform: rotate(0);
+  transform: translateY(-50%) rotate(0);
 }
 .FAQs ul li .question {
   font-weight: 500;
   font-size: 18px;
   position: relative;
   cursor: pointer;
-  padding: 24px 30px;
+  padding: 22px 30px;
 }
 .FAQs ul li .question::after {
   content: "";
@@ -303,9 +316,9 @@ header .lang-switcher {
 }
 .FAQs ul li .arrow-icon {
   position: absolute;
-  top: 24px;
+  top: 50%;
   right: 24px;
-  transform: rotate(90deg);
+  transform: translateY(-50%) rotate(90deg);
   transition: all 0.2s ease-out;
 }
 
@@ -320,6 +333,11 @@ header .lang-switcher {
     opacity: 1;
     transform: translateY(0);
   }
+}
+.stc-footer-component > * {
+  max-width: 1200px;
+  width: 100%;
+  margin: auto !important;
 }
 
 /*# sourceMappingURL=style.css.map */
