--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,14 @@ body {
   color: #1d252d;
 }
 
+body.ar {
+  direction: rtl;
+}
+
+body.ar .FAQs ul li .question .arrow-icon {
+  transform: rotate(90deg);
+}
+
 p {
   line-height: 30px;
 }
@@ -283,25 +291,32 @@ header .lang-switcher {
   animation: expanding 1s ease forwards 0ms;
 }
 .FAQs ul li.expand .arrow-icon {
-  transform: translateY(-50%) rotate(0);
+  transform: rotate(0) !important;
 }
 .FAQs ul li .question {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 17px;
   position: relative;
   cursor: pointer;
-  padding: 22px 30px;
+  padding: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .FAQs ul li .question::after {
   content: "";
   position: absolute;
   bottom: 10px;
-  left: 30px;
-  width: calc(100% - 60px);
+  left: 22px;
+  width: calc(100% - 44px);
   height: 2px;
   background-color: #ff375e;
   transform: scaleX(0);
   transform-origin: center;
+  transition: all 0.2s ease-out;
+}
+.FAQs ul li .question .arrow-icon {
+  transform: rotate(-90deg);
   transition: all 0.2s ease-out;
 }
 .FAQs ul li .answer {
@@ -309,24 +324,13 @@ header .lang-switcher {
   line-height: 28px;
   height: auto;
   opacity: 0;
-  padding: 0 30px;
+  padding: 0 22px;
   transform: translateY(5px);
   max-height: 0;
-  transition: max-height 1s ease 0ms;
-}
-.FAQs ul li .arrow-icon {
-  position: absolute;
-  top: 50%;
-  right: 24px;
-  transform: translateY(-50%) rotate(90deg);
-  transition: all 0.2s ease-out;
+  transition: max-height 10s ease 0ms;
 }
 
 @keyframes expanding {
-  30% {
-    max-height: 500px;
-    padding-bottom: 20px;
-  }
   100% {
     max-height: 500px;
     padding-bottom: 20px;
