Responsive all devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,13 +147,13 @@ h5 {
   max-width: 1200px;
   width: 100%;
   margin: auto;
+  padding: 30px 40px;
 }
 
 header {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 30px 20px 20px;
   width: 100%;
   direction: ltr;
 }
@@ -169,9 +169,9 @@ header .lang-switcher {
 }
 
 .hero {
-  padding: 130px 30px 30px;
-  height: 1000px;
+  padding: 130px 0 100px;
   background-size: cover;
+  background-position: 100%;
   background-repeat: no-repeat;
 }
 .hero .content {
@@ -218,9 +218,8 @@ header .lang-switcher {
   font-weight: 500;
 }
 .what-is-maraphone .card {
-  padding: 20px;
+  width: 48%;
   color: #1d252d;
-  flex: 1;
 }
 .what-is-maraphone .card img {
   margin-left: 20px;
@@ -240,13 +239,14 @@ header .lang-switcher {
 }
 .features .feature {
   display: flex;
+  justify-content: space-between;
   padding: 80px 0;
 }
 .features .feature.reverse {
   flex-direction: row-reverse;
 }
 .features .feature .content {
-  flex: 1;
+  width: 50%;
   padding: 24px 30px 0;
 }
 .features .feature .content .title {
@@ -256,7 +256,8 @@ header .lang-switcher {
   margin-bottom: 24px;
 }
 .features .feature img {
-  flex: 1;
+  max-width: 50%;
+  padding: 0 20px;
 }
 
 .FAQs {
@@ -342,6 +343,141 @@ header .lang-switcher {
   max-width: 1200px;
   width: 100%;
   margin: auto !important;
+}
+
+@media screen and (max-width: 1070px) {
+  .hero .phone-img {
+    width: 340px;
+  }
+
+  .main-container {
+    padding: 30px;
+  }
+
+  .what-is-maraphone {
+    padding: 40px 30px;
+  }
+}
+@media screen and (max-width: 980px) {
+  .hero {
+    padding: 130px 0;
+  }
+  .hero .phone-img {
+    width: 270px;
+  }
+
+  .what-is-maraphone {
+    margin-top: -150px;
+  }
+}
+@media screen and (max-width: 800px) {
+  h5 {
+    font-size: 17px;
+  }
+
+  .hero {
+    padding-top: 70px;
+  }
+  .hero .main-container {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .hero .content {
+    padding-top: 20px;
+    text-align: center;
+  }
+  .hero .content h1 {
+    font-size: 36px;
+    line-height: 48px;
+  }
+  .hero .content p {
+    margin: 0 auto 30px;
+  }
+  .hero .phone-img {
+    width: 240px;
+  }
+
+  .what-is-maraphone h2 {
+    margin-bottom: 0;
+    font-size: 24px;
+  }
+  .what-is-maraphone .flex.justify-between {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 0 !important;
+  }
+  .what-is-maraphone .flex.justify-between .card {
+    padding-top: 40px;
+    width: 100%;
+  }
+  .what-is-maraphone .flex.justify-between .card .title {
+    font-size: 19px;
+  }
+
+  .features .feature {
+    flex-direction: column !important;
+    align-items: center;
+  }
+  .features .feature .content {
+    width: 100%;
+    text-align: center;
+  }
+  .features .feature .content .title {
+    margin-bottom: 14px;
+  }
+  .features .feature img {
+    max-width: 70%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .main-container {
+    padding: 20px;
+  }
+
+  .hero .content h1 {
+    font-size: 24px;
+    line-height: 34px;
+    margin-bottom: 20px;
+  }
+  .hero .content p {
+    max-width: 100%;
+    font-size: 17px;
+    color: #f3efef;
+  }
+
+  .what-is-maraphone {
+    margin-top: -110px;
+  }
+
+  .features .feature {
+    flex-direction: column !important;
+    align-items: center;
+  }
+  .features .feature .content {
+    width: 100%;
+    text-align: center;
+  }
+  .features .feature .content .title {
+    margin-bottom: 14px;
+  }
+  .features .feature img {
+    max-width: 70%;
+  }
+}
+@media screen and (max-width: 420px) {
+  .download-app-btns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .download-app-btns a {
+    width: 48%;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  .download-app-btns a img {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
