Bugfix: stc drawer

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -92,6 +92,7 @@ header {
     color: #fff;
     h1 {
       font-size: 42px;
+      font-weight: 600;
       margin-bottom: 30px;
       line-height: 60px;
     }
