--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,7 @@ header .lang-switcher {
 }
 .hero .content h1 {
   font-size: 42px;
+  font-weight: 600;
   margin-bottom: 30px;
   line-height: 60px;
 }
