--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -380,6 +380,7 @@ header {
       .content {
         width: 100%;
         text-align: center;
+        padding: 20px 10px 0;
         .title {
           margin-bottom: 14px;
         }
