--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import './fonts';
+@import './what-is-maraphone';
 
 // Global styles
 * {
@@ -120,36 +121,6 @@ header {
   }
 }
 
-// What is Maraphone?
-.what-is-maraphone {
-  padding: 60px;
-  background-color: #ffffff;
-  box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
-  margin-top: -110px;
-  border-radius: 20px;
-  h2 {
-    font-size: 36px;
-    margin-bottom: 30px;
-    font-weight: 500;
-  }
-  .card {
-    width: 48%;
-    color: #1d252d;
-    img {
-      margin-left: 20px;
-      margin-bottom: 20px;
-    }
-    .title {
-      font-size: 21px;
-      font-weight: bold;
-      margin-bottom: 12px;
-    }
-    p {
-      line-height: 30px;
-    }
-  }
-}
-
 // Features
 .features {
   padding: 80px 40px 40px;
@@ -164,7 +135,7 @@ header {
       width: 50%;
       padding: 24px 30px 0;
       .title {
-        font-size: 40px;
+        font-size: 36px;
         font-weight: bold;
         line-height: 50px;
         margin-bottom: 24px;
@@ -392,7 +363,7 @@ header {
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 440px) {
   .download-app-btns {
     display: flex;
     justify-content: space-between;
