--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@
   animation-delay: 1s;
 }
 .what-is-maraphone.animated .card {
-  animation: scaleOutCard 0.9s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+  animation: zoomIn 0.9s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
 }
 .what-is-maraphone h5 {
   transform: translateX(40px);
@@ -159,9 +159,92 @@
     opacity: 1;
   }
 }
-@keyframes scaleOutCard {
+.FAQs {
+  text-align: center;
+  padding-bottom: 60px;
+}
+.FAQs.animated ul li {
+  animation: fadeIpUp 1s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+}
+.FAQs h2 {
+  font-size: 60px;
+  margin-bottom: 60px;
+}
+.FAQs ul {
+  list-style-type: none;
+  width: 100%;
+  max-width: 700px;
+  margin: auto;
+}
+.FAQs ul li {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
+  margin-bottom: 22px;
+  text-align: start;
+  position: relative;
+  transform: translateY(60px);
+  opacity: 0;
+}
+.FAQs ul li.expand .question::after {
+  transition: all 0.4s ease-out;
+  transform: scaleX(1);
+  background-color: #f3efef;
+}
+.FAQs ul li.expand .answer {
+  animation: expanding 1s ease forwards 0ms;
+}
+.FAQs ul li.expand .arrow-icon {
+  transform: rotate(0) !important;
+}
+.FAQs ul li .question {
+  font-weight: 500;
+  font-size: 17px;
+  position: relative;
+  cursor: pointer;
+  padding: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.FAQs ul li .question::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 22px;
+  width: calc(100% - 44px);
+  height: 2px;
+  background-color: #ff375e;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: all 0.2s ease-out;
+}
+.FAQs ul li .question .arrow-icon {
+  transform: rotate(-90deg);
+  transition: all 0.2s ease-out;
+}
+.FAQs ul li .answer {
+  color: #8e9aa0;
+  line-height: 28px;
+  height: auto;
+  opacity: 0;
+  padding: 0 22px;
+  transform: translateY(5px);
+  max-height: 0;
+  transition: max-height 10s ease 0ms;
+}
+
+@keyframes expanding {
+  100% {
+    max-height: 500px;
+    padding-bottom: 20px;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes fadeIpUp {
   to {
-    transform: scale(1);
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -309,85 +392,6 @@ header .lang-switcher {
   padding: 0 20px;
 }
 
-.FAQs {
-  text-align: center;
-  padding-bottom: 60px;
-}
-.FAQs h2 {
-  font-size: 60px;
-  margin-bottom: 60px;
-}
-.FAQs ul {
-  list-style-type: none;
-  width: 100%;
-  max-width: 700px;
-  margin: auto;
-}
-.FAQs ul li {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0px 14px 26px rgba(0, 0, 0, 0.08);
-  margin-bottom: 22px;
-  text-align: start;
-  position: relative;
-  transition: all 0.2s ease-out;
-}
-.FAQs ul li.expand .question::after {
-  transition: all 0.4s ease-out;
-  transform: scaleX(1);
-  background-color: #f3efef;
-}
-.FAQs ul li.expand .answer {
-  animation: expanding 1s ease forwards 0ms;
-}
-.FAQs ul li.expand .arrow-icon {
-  transform: rotate(0) !important;
-}
-.FAQs ul li .question {
-  font-weight: 500;
-  font-size: 17px;
-  position: relative;
-  cursor: pointer;
-  padding: 22px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.FAQs ul li .question::after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 22px;
-  width: calc(100% - 44px);
-  height: 2px;
-  background-color: #ff375e;
-  transform: scaleX(0);
-  transform-origin: center;
-  transition: all 0.2s ease-out;
-}
-.FAQs ul li .question .arrow-icon {
-  transform: rotate(-90deg);
-  transition: all 0.2s ease-out;
-}
-.FAQs ul li .answer {
-  color: #8e9aa0;
-  line-height: 28px;
-  height: auto;
-  opacity: 0;
-  padding: 0 22px;
-  transform: translateY(5px);
-  max-height: 0;
-  transition: max-height 10s ease 0ms;
-}
-
-@keyframes expanding {
-  100% {
-    max-height: 500px;
-    padding-bottom: 20px;
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 .stc-footer-component > * {
   max-width: 1200px;
   width: 100%;
