Update FAQs animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,12 +163,31 @@
   text-align: center;
   padding-bottom: 60px;
 }
+.FAQs.animated h5 {
+  transform: translateY(60px);
+  opacity: 0;
+  animation: fadeIpUp 0.7s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+  animation-delay: 0.3s;
+}
+.FAQs.animated h2 {
+  font-size: 60px;
+  margin-bottom: 60px;
+  transform: translateY(60px);
+  opacity: 0;
+  animation: fadeIpUp 0.7s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+}
 .FAQs.animated ul li {
-  animation: fadeIpUp 1s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+  animation: fadeIpUp 0.7s cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+}
+.FAQs h5 {
+  transform: translateY(60px);
+  opacity: 0;
 }
 .FAQs h2 {
   font-size: 60px;
   margin-bottom: 60px;
+  transform: translateY(60px);
+  opacity: 0;
 }
 .FAQs ul {
   list-style-type: none;
