--- a/assets/scss/_what-is-maraphone.scss
+++ b/assets/scss/_what-is-maraphone.scss
@@ -51,7 +51,7 @@
     }
     .title {
       font-size: 21px;
-      font-weight: bold;
+      font-weight: 500;
       margin-bottom: 12px;
     }
     p {
