--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,8 @@
 @import './fonts';
 @import './what-is-maraphone';
 @import './FAQs';
+@import './responsive';
+@import './hero';
 
 // Global styles
 * {
@@ -83,45 +85,6 @@ header {
   }
 }
 
-// Hero section
-.hero {
-  padding: 130px 0 100px;
-  background-size: cover;
-  background-position: 100%;
-  background-repeat: no-repeat;
-  .content {
-    padding-top: 120px;
-    color: #fff;
-    h1 {
-      font-size: 42px;
-      font-weight: 600;
-      margin-bottom: 30px;
-      line-height: 60px;
-    }
-    p {
-      font-size: 18px;
-      margin-bottom: 40px;
-      max-width: 70%;
-    }
-  }
-  .phone-img {
-    filter: drop-shadow(17px 15px 11px rgba(0, 0, 0, 0.18));
-    height: 100%;
-    animation: movePhoneImg 3.6s ease-out infinite;
-  }
-  @keyframes movePhoneImg {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(20px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  }
-}
-
 // Features
 .features {
   padding: 80px 40px 40px;
@@ -137,7 +100,7 @@ header {
       padding: 24px 30px 0;
       .title {
         font-size: 36px;
-        font-weight: bold;
+        font-weight: 500;
         line-height: 50px;
         margin-bottom: 24px;
       }
@@ -154,145 +117,4 @@ header {
   max-width: 1200px;
   width: 100%;
   margin: auto !important;
-}
-
-// Break points > RESPONSIVE
-@media screen and (max-width: 1070px) {
-  .hero .phone-img {
-    width: 340px;
-  }
-  .main-container {
-    padding: 30px;
-  }
-  .what-is-maraphone {
-    padding: 40px 30px;
-  }
-}
-@media screen and (max-width: 980px) {
-  .hero {
-    padding: 130px 0;
-    .phone-img {
-      width: 270px;
-    }
-  }
-  .what-is-maraphone {
-    margin-top: -150px;
-  }
-}
-// Ipad
-@media screen and (max-width: 800px) {
-  h5 {
-    font-size: 17px;
-  }
-  .hero {
-    padding-top: 70px;
-    .main-container {
-      flex-direction: column-reverse;
-      align-items: center;
-    }
-    .content {
-      padding-top: 20px;
-      text-align: center;
-      h1 {
-        font-size: 36px;
-        line-height: 48px;
-      }
-      p {
-        margin: 0 auto 30px;
-      }
-    }
-    .phone-img {
-      width: 240px;
-    }
-  }
-  .what-is-maraphone {
-    h2 {
-      margin-bottom: 0;
-      font-size: 24px;
-    }
-    .flex.justify-between {
-      flex-direction: column;
-      align-items: center;
-      padding-top: 0 !important;
-      .card {
-        padding-top: 40px;
-        width: 100%;
-        .title {
-          font-size: 19px;
-        }
-      }
-    }
-  }
-  .features {
-    .feature {
-      flex-direction: column !important;
-      align-items: center;
-      .content {
-        width: 100%;
-        text-align: center;
-        .title {
-          margin-bottom: 14px;
-        }
-      }
-      img {
-        max-width: 70%;
-      }
-    }
-  }
-}
-// Mobile
-@media screen and (max-width: 500px) {
-  .main-container {
-    padding: 20px;
-  }
-  .hero {
-    .content {
-      h1 {
-        font-size: 24px;
-        line-height: 34px;
-        margin-bottom: 20px;
-      }
-      p {
-        max-width: 100%;
-        font-size: 17px;
-        color: #f3efef;
-      }
-    }
-  }
-  .what-is-maraphone {
-    margin-top: -110px;
-  }
-  .features {
-    .feature {
-      flex-direction: column !important;
-      align-items: center;
-      .content {
-        width: 100%;
-        text-align: center;
-        padding: 20px 10px 0;
-        .title {
-          margin-bottom: 14px;
-        }
-      }
-      img {
-        max-width: 70%;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 440px) {
-  .download-app-btns {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    a {
-      width: 48%;
-      margin-left: 0 !important;
-      margin-right: 0 !important;
-      img {
-        width: 100%;
-      }
-    }
-  }
 }
