--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,9 @@
 @import './fonts';
+@import './hero';
 @import './what-is-maraphone';
+@import './features';
 @import './FAQs';
 @import './responsive';
-@import './hero';
 
 // Global styles
 * {
@@ -82,33 +83,6 @@ header {
     color: #fff;
     margin-right: 24px;
     margin-top: -2px;
-  }
-}
-
-// Features
-.features {
-  padding: 80px 40px 40px;
-  .feature {
-    display: flex;
-    justify-content: space-between;
-    padding: 80px 0;
-    &.reverse {
-      flex-direction: row-reverse;
-    }
-    .content {
-      width: 50%;
-      padding: 24px 30px 0;
-      .title {
-        font-size: 36px;
-        font-weight: 500;
-        line-height: 50px;
-        margin-bottom: 24px;
-      }
-    }
-    img {
-      max-width: 50%;
-      padding: 0 20px;
-    }
   }
 }
 
