--- a/assets/scss/_features.scss
+++ b/assets/scss/_features.scss
@@ -1,4 +1,3 @@
-// Features
 .features {
   padding: 80px 40px 40px;
   .feature {
@@ -9,25 +8,19 @@
       flex-direction: row-reverse;
     }
     &.animated {
-      h5 {
+      h5,
+      .title,
+      p {
         animation: showTitleAndSubTitle 1s cubic-bezier(0.22, 0.61, 0.36, 1)
           forwards;
         animation-delay: 0.1s;
-      }
-      .title {
-        animation: showTitleAndSubTitle 1s cubic-bezier(0.22, 0.61, 0.36, 1)
-          forwards;
-        animation-delay: 0.3s;
-      }
-      p {
-        animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
-        animation-delay: 0.8s;
       }
     }
     .content {
       width: 50%;
       padding: 24px 30px 0;
       h5,
+      p,
       .title {
         transform: translateX(60px);
         opacity: 0;
@@ -36,11 +29,7 @@
         font-size: 36px;
         font-weight: 500;
         line-height: 50px;
-        margin-bottom: 24px;
-      }
-      p {
-        transform: translateY(30px);
-        opacity: 0;
+        margin-bottom: 20px;
       }
     }
     img {
@@ -56,10 +45,13 @@
     opacity: 1;
   }
 }
-
-@keyframes fadeInUp {
-  to {
-    transform: translateY(0);
-    opacity: 1;
+// Features
+body-en {
+  .features .feature .content {
+    h5,
+    p,
+    .title {
+      transform: translateX(-60px);
+    }
   }
 }
