Update features animation direction in /en

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,10 +199,10 @@
     opacity: 1;
   }
 }
-body-en .features .feature .content h5,
-body-en .features .feature .content p,
-body-en .features .feature .content .title {
-  transform: translateX(-60px);
+body.en .features .feature .content h5,
+body.en .features .feature .content p,
+body.en .features .feature .content .title {
+  transform: translateX(60px);
 }
 
 .FAQs {
