--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,88 @@
   src: url("/assets/fonts/STCForward/STCForward-ExtraBoldItalic.eot");
   src: url("/assets/fonts/STCForward/STCForward-ExtraBoldItalic.woff") format("woff"), url("/assets/fonts/STCForward/STCForward-ExtraBoldItalic.ttf") format("truetype"), url("/assets/fonts/STCForward/STCForward-ExtraBoldItalic.svg") format("svg");
 }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  font-family: "STCForward", sans-serif, arial;
+}
+
+body {
+  background-color: #f7f7fa;
+  color: #1d252d;
+  direction: rtl;
+}
+
+body.en {
+  direction: ltr;
+}
+body.en .FAQs ul li .question .arrow-icon {
+  transform: rotate(-90deg);
+}
+body.en header .lang-switcher span {
+  margin-top: -5px;
+}
+
+p {
+  line-height: 30px;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+
+h5 {
+  font-size: 19px;
+  font-weight: normal;
+  color: #8e9aa0;
+  margin-bottom: 8px;
+}
+
+.flex {
+  display: flex;
+}
+.flex.wrap {
+  flex-wrap: wrap;
+}
+.flex.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+.flex.align-center {
+  align-items: center;
+}
+.flex.justify-between {
+  justify-content: space-between;
+}
+
+.main-container {
+  max-width: 1200px;
+  width: 100%;
+  margin: auto;
+  padding: 30px 40px;
+}
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  direction: ltr;
+}
+header .lang-switcher {
+  padding: 0 30px;
+  height: 48px;
+  border: 2px solid #fff;
+  border-radius: 25px;
+  font-size: 16px;
+  color: #fff;
+  margin-right: 24px;
+}
+
 .hero {
   padding: 130px 0 100px;
   background-size: cover;
@@ -417,92 +499,6 @@ body.en .features .feature .content .title {
   .download-app-btns a img {
     width: 100%;
   }
-}
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  outline: 0;
-  font-family: "STCForward", sans-serif, arial;
-}
-
-body {
-  background-color: #f7f7fa;
-  color: #1d252d;
-  direction: rtl;
-}
-
-body.en {
-  direction: ltr;
-}
-
-body.en .FAQs ul li .question .arrow-icon {
-  transform: rotate(-90deg);
-}
-
-p {
-  line-height: 30px;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-h5 {
-  font-size: 19px;
-  font-weight: normal;
-  color: #8e9aa0;
-  margin-bottom: 8px;
-}
-
-.flex {
-  display: flex;
-}
-.flex.wrap {
-  flex-wrap: wrap;
-}
-.flex.flex-center {
-  align-items: center;
-  justify-content: center;
-}
-.flex.align-center {
-  align-items: center;
-}
-.flex.justify-between {
-  justify-content: space-between;
-}
-
-.main-container {
-  max-width: 1200px;
-  width: 100%;
-  margin: auto;
-  padding: 30px 40px;
-}
-
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  direction: ltr;
-}
-header .lang-switcher {
-  padding: 0 30px;
-  height: 40px;
-  border: 2px solid #fff;
-  border-radius: 25px;
-  font-size: 16px;
-  color: #fff;
-  margin-right: 24px;
-  margin-top: -2px;
-}
-
-.stc-footer-component > * {
-  max-width: 1200px;
-  width: 100%;
-  margin: auto !important;
 }
 
 /*# sourceMappingURL=style.css.map */
