--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,95 +1,8 @@
 @import './fonts';
+@import './global';
+@import './header';
 @import './hero';
 @import './what-is-maraphone';
 @import './features';
 @import './FAQs';
 @import './responsive';
-
-// Global styles
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  outline: 0;
-  font-family: 'STCForward', sans-serif, arial;
-}
-
-body {
-  background-color: #f7f7fa;
-  color: #1d252d;
-  direction: rtl;
-}
-body.en {
-  direction: ltr;
-}
-body.en .FAQs ul li .question .arrow-icon {
-  transform: rotate(-90deg);
-}
-
-p {
-  line-height: 30px;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-h5 {
-  font-size: 19px;
-  font-weight: normal;
-  color: #8e9aa0;
-  margin-bottom: 8px;
-}
-
-.flex {
-  display: flex;
-  &.wrap {
-    flex-wrap: wrap;
-  }
-  &.flex-center {
-    align-items: center;
-    justify-content: center;
-  }
-  &.align-center {
-    align-items: center;
-  }
-  &.justify-between {
-    justify-content: space-between;
-  }
-}
-
-// main-container
-.main-container {
-  max-width: 1200px;
-  width: 100%;
-  margin: auto;
-  padding: 30px 40px;
-}
-
-// Header
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  direction: ltr;
-  .lang-switcher {
-    padding: 0 30px;
-    height: 40px;
-    border: 2px solid #fff;
-    border-radius: 25px;
-    font-size: 16px;
-    color: #fff;
-    margin-right: 24px;
-    margin-top: -2px;
-  }
-}
-
-// stc footer
-.stc-footer-component > * {
-  max-width: 1200px;
-  width: 100%;
-  margin: auto !important;
-}
